my updated code is uploaded

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- ===banner section=== -->
         <section class=" w-11/12 mx-auto mt-12 flex flex-col justify-center items-center space-y-5">
             <div>
-                <img src="/assets/banner-IKKzlXwX.png" alt="">
+                <img src="./assets/banner-IKKzlXwX.png" alt="">
             </div>
             <h2 class="text-center sm:text-6xl text-4xl font-extrabold">A barn house of this design has a <br> striking
                 appearance
@@ -119,7 +119,7 @@
         <section class="w-full bg-bgLivablColor sm:mt-12 mt-6 pb-12 ">
             <div class="hero bg-base-200">
                 <div class="hero-content flex-col-reverse lg:flex-row-reverse gap-5  pt-16">
-                    <img src="/assets/Rectangle-B0U4y7-x.png" class="w-[520px] h-[500px] rounded-lg shadow-2xl" />
+                    <img src="./assets/Rectangle-B0U4y7-x.png" class="w-[520px] h-[500px] rounded-lg shadow-2xl" />
                     <div class="">
                         <div class="flex sm:items-center sm:justify-start justify-center  ">
                             <div class="w-32 h-8 flex justify-center  items-center rounded-full bg-white">
@@ -276,7 +276,7 @@
                     <div
                         class="shadow  flex sm:justify-between sm:items-center sm:flex-row flex-col rounded-lg gap-4 p-4 sm:w-8/12 w-full">
                         <div class="sm:w-5/12 w-full h-full">
-                            <img class="w-full h-full " src="/assets/img1-Ch5uqxwU.png" alt="">
+                            <img class="w-full h-full " src="./assets/img1-Ch5uqxwU.png" alt="">
                         </div>
                         <div class="sm:w-7/12 w-full">
                             <h6 class="text-base font-extrabold">Commercial</h6>
@@ -299,20 +299,20 @@
                     </div>
                     <!-- ====== -->
                     <div class="shadow sm:w-4/12 w-full rounded-lg">
-                        <div class="w-full"><img class="w-full p-4" src="/assets/img2-jcY_38PK.png" alt=""></div>
+                        <div class="w-full"><img class="w-full p-4" src="./assets/img2-jcY_38PK.png" alt=""></div>
                     </div>
                 </div>
                 <!-- ========== -->
                 <div class="flex sm:justify-between flex-col-reverse sm:flex-row-reverse  gap-5">
                     <div class="shadow sm:w-3/12 w-full rounded-lg ">
-                        <div class="w-full h-full"> <img class="w-full h-full p-4" src="/assets/img3-DfIjfzRA.png"
+                        <div class="w-full h-full"> <img class="w-full h-full p-4" src="./assets/img3-DfIjfzRA.png"
                                 alt=""></div>
                     </div>
                     <!-- ============== -->
                     <div
                         class="shadow  flex sm:justify-start sm:items-center sm:flex-row flex-col rounded-lg gap-4 p-4 sm:w-6/12 w-full">
                         <div class="sm:w-5/12 w-full h-full">
-                            <img class="w-full h-full" src="/assets/img4-DRJcp0Bf.png" alt="">
+                            <img class="w-full h-full" src="./assets/img4-DRJcp0Bf.png" alt="">
                         </div>
                         <div class="sm:w-7/12 w-full">
                             <h6 class="text-base font-extrabold">Commercial</h6>
@@ -336,7 +336,7 @@
                     <!-- =========== -->
                     <div class="shadow sm:w-3/12 w-full rounded-lg">
                         <div class="w-full h-full">
-                            <img class="w-full h-full p-4" src="/assets/img5-FW94MrBi.png" alt="">
+                            <img class="w-full h-full p-4" src="./assets/img5-FW94MrBi.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -468,70 +468,70 @@
         <div class=" w-11/12 mx-auto mb-6 flex justify-center items-center">
             <div class=" mx-auto sm:grid grid-row-temp sm:grid-col-temp">
                 <div class="sm:col-span-3 sm:row-span-3 p-1 "><img class="w-full h-full rounded-lg shadow-lg"
-                        src="/assets/13-CAkg0PN_.jpg" alt="">
+                        src="./assets/13-CAkg0PN_.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-2  p-1"><img class="w-full h-full s rounded-lg shadow-lg"
-                        src="/assets/22-DQQjS0Se.jpg" alt="">
+                        src="./assets/22-DQQjS0Se.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-3  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/17-DpmJNw6_.jpg" alt="">
+                        src="./assets/17-DpmJNw6_.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-4  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/01-CiaJCQZh.jpg" alt="">
+                        src="./assets/01-CiaJCQZh.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-2  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/25-DbPDvmTQ.jpg" alt="">
+                        src="./assets/25-DbPDvmTQ.jpg" alt="">
                 </div>
                 <div class="col-span-4 row-span-5  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/29-CdExAGYe.jpg" alt="">
+                        src="./assets/29-CdExAGYe.jpg" alt="">
                 </div>
                 <div class="col-span-5 row-span-4  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/23-Ck1eLOhF.jpg" alt="">
+                        src="./assets/23-Ck1eLOhF.jpg" alt="">
                 </div>
                 <div class="col-span-5 row-span-3  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/31-CFoM51cJ.jpg" alt="">
+                        src="./assets/31-CFoM51cJ.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-6  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/20-Dt4laKED.jpg" alt="">
+                        src="./assets/20-Dt4laKED.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-3  p-1"><img class="w-full h-full shadow-sm"
-                        src="/assets/21-9F0I9t6Z.jpg" alt="">
+                        src="./assets/21-9F0I9t6Z.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-4  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/04-kc25qCuN.jpg" alt="">
+                        src="./assets/04-kc25qCuN.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-3  p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/18-CAXOI3YR.jpg" alt="">
+                        src="./assets/18-CAXOI3YR.jpg" alt="">
                 </div>
                 <div class="col-span-5 row-span-4 p-1 "><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/14-DQ0JVYYv.jpg" alt="">
+                        src="./assets/14-DQ0JVYYv.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-3 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/16-DmLjKQH6.jpg" alt="">
+                        src="./assets/16-DmLjKQH6.jpg" alt="">
                 </div>
                 <div class="col-span-5 row-span-3 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/12-C0tzW9oD.jpg" alt="">
+                        src="./assets/12-C0tzW9oD.jpg" alt="">
                 </div>
                 <div class="col-span-7 row-span-5 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/28-BihgM833.jpg" alt="">
+                        src="./assets/28-BihgM833.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-4 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/29-CdExAGYe.jpg" alt="">
+                        src="./assets/29-CdExAGYe.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-3 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/06-CG_SWVN4.jpg" alt="">
+                        src="./assets/06-CG_SWVN4.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-3 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/11-6rI9-w0Z.jpg" alt="">
+                        src="./assets/11-6rI9-w0Z.jpg" alt="">
                 </div>
                 <div class="col-span-6 row-span-3 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/21-9F0I9t6Z.jpg" alt="">
+                        src="./assets/21-9F0I9t6Z.jpg" alt="">
                 </div>
                 <div class="col-span-4 row-span-3 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/26-BUy2_11n.jpg" alt="">
+                        src="./assets/26-BUy2_11n.jpg" alt="">
                 </div>
                 <div class="col-span-3 row-span-2 p-1"><img class="w-full h-full  rounded-lg shadow-lg"
-                        src="/assets/07-CwN7WocC.jpg" alt="">
+                        src="./assets/07-CwN7WocC.jpg" alt="">
                 </div>
             </div>
         </div>
